--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 h1 {
   font-size: 50px;
@@ -24,4 +25,8 @@ section {
   border-radius: 12px;
   color: white;
   font-weight: 700;
+}
+#header-area {
+  background-image: url("images/top-banner.png");
+  background-repeat: no-repeat;
 }
